{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 212,
  "lineage": "c932128b-1edc-e114-c97c-aa6b4fbd8ef4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ff656e0c912391e7",
            "domain": "vpc",
            "id": "eipalloc-0ff656e0c912391e7",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-209-130-234.compute-1.amazonaws.com",
            "public_ip": "44.209.130.234",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:830088283023:internet-gateway/igw-03d274ce474502058",
            "id": "igw-03d274ce474502058",
            "owner_id": "830088283023",
            "vpc_id": "vpc-0ad303b547a428735"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ff656e0c912391e7",
            "connectivity_type": "public",
            "id": "nat-09d16bf40deaaa080",
            "network_interface_id": "eni-014f43fe7eea88bfc",
            "private_ip": "10.0.3.251",
            "public_ip": "44.209.130.234",
            "subnet_id": "subnet-085fede1c9610a534"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00f311e40bd06d8281080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09d16bf40deaaa080",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00f311e40bd06d828",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:830088283023:route-table/rtb-00f311e40bd06d828",
            "id": "rtb-00f311e40bd06d828",
            "owner_id": "830088283023",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ad303b547a428735"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:830088283023:route-table/rtb-0b6860ea03bcee62e",
            "id": "rtb-0b6860ea03bcee62e",
            "owner_id": "830088283023",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03d274ce474502058",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ad303b547a428735"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05167421db692a774",
            "route_table_id": "rtb-0b6860ea03bcee62e",
            "subnet_id": "subnet-072c17f310afa151e"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060a47a8f58a61fea",
            "route_table_id": "rtb-0b6860ea03bcee62e",
            "subnet_id": "subnet-06e391c71eb5b894f"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9d720888a4b274a",
            "route_table_id": "rtb-0b6860ea03bcee62e",
            "subnet_id": "subnet-085fede1c9610a534"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05514116ad6e46929",
            "route_table_id": "rtb-0b6860ea03bcee62e",
            "subnet_id": "subnet-0267966b19bcb8422"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:830088283023:subnet/subnet-07f9f3534407c9ca5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f9f3534407c9ca5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "830088283023",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo mode1_private_subnet"
            },
            "tags_all": {
              "Name": "demo mode1_private_subnet"
            },
            "vpc_id": "vpc-0ad303b547a428735"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:830088283023:subnet/subnet-0f713cb722ed1aaf9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f713cb722ed1aaf9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "830088283023",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo mode1_private_subnet"
            },
            "tags_all": {
              "Name": "demo mode1_private_subnet"
            },
            "vpc_id": "vpc-0ad303b547a428735"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:830088283023:subnet/subnet-0d86e019812ae8b1d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d86e019812ae8b1d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "830088283023",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo mode1_private_subnet"
            },
            "tags_all": {
              "Name": "demo mode1_private_subnet"
            },
            "vpc_id": "vpc-0ad303b547a428735"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:830088283023:subnet/subnet-0f46a0d86068811f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f46a0d86068811f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "830088283023",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo mode1_private_subnet"
            },
            "tags_all": {
              "Name": "demo mode1_private_subnet"
            },
            "vpc_id": "vpc-0ad303b547a428735"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:830088283023:subnet/subnet-072c17f310afa151e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072c17f310afa151e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "830088283023",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo mode1_public_subnet"
            },
            "tags_all": {
              "Name": "demo mode1_public_subnet"
            },
            "vpc_id": "vpc-0ad303b547a428735"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:830088283023:subnet/subnet-06e391c71eb5b894f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e391c71eb5b894f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "830088283023",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo mode1_public_subnet"
            },
            "tags_all": {
              "Name": "demo mode1_public_subnet"
            },
            "vpc_id": "vpc-0ad303b547a428735"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:830088283023:subnet/subnet-085fede1c9610a534",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085fede1c9610a534",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "830088283023",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo mode1_public_subnet"
            },
            "tags_all": {
              "Name": "demo mode1_public_subnet"
            },
            "vpc_id": "vpc-0ad303b547a428735"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:830088283023:subnet/subnet-0267966b19bcb8422",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0267966b19bcb8422",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "830088283023",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo mode1_public_subnet"
            },
            "tags_all": {
              "Name": "demo mode1_public_subnet"
            },
            "vpc_id": "vpc-0ad303b547a428735"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:830088283023:vpc/vpc-0ad303b547a428735",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e53cdc509818c242",
            "default_route_table_id": "rtb-0c9e726dcc300882f",
            "default_security_group_id": "sg-0cf98b4d94af92ab9",
            "dhcp_options_id": "dopt-04bb1c54dc9a7e0c5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ad303b547a428735",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c9e726dcc300882f",
            "owner_id": "830088283023",
            "tags": {
              "Name": "demo mode1_vpc"
            },
            "tags_all": {
              "Name": "demo mode1_vpc"
            }
          }
        }
      ]
    }
  ]
}